# stunning-octo-spork

./: README.md  answer.csv  log.csv  pyproject.toml
.github/workflows/: pages.yml  python-app.yml
stunning_octo_spork/: __init__.py  __main__.py  cli.py  detect.py  logentry.py
tests/: test_cli.py  test_detect.py  test_logentry.py  test_stunning_octo_spork.py
